--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="wrapper">
             <div class="top-bar">
                 <i class="material-icons">expand_more</i>
-                <span>Lưu Xuân Nghiệp</span>
+                <span>Nguyễn Hoàng Dũng</span>
                 <i class="material-icons">more_horiz</i>
             </div>
 
@@ -68,13 +68,13 @@
                 </div>
                 <ul>
                     <p class="rainbow" class="copyright">Created by
-                        <a style="text-decoration: none;" class="copyright" href="https://www.facebook.com/NghiepMeow.Developer">
+                        <a style="text-decoration: none;" class="copyright" href="https://www.facebook.com/User.xNgHoangDung.Info">
                             <font class="rainbow" color="white"> XuanNghiep</font>
                         </a>
                         <br> <strong>All rights reserved - © 2023 </strong></p>
                     </footer>
             </div>
-            <div id="Toast">Welcome to the website Lưu Xuân Nghiệp :)</div>
+            <div id="Toast">Welcome to the website Nguyễn Hoàng Dũng :)</div>
             <script src="./js/music-list.js">
             </script>
             <script src="./js/script.js"></script>
